--- a/.gitignore
+++ b/.gitignore
@@ -127,3 +127,10 @@ xcuserdata
 # UNKNOWN: recommended by others, but I can't discover what these files are
 #
 # ...none. Everything is now explained.
+
+
+
+####
+# Added by DM
+
+*~
